[package]
name = "tree_iron"
version = "0.1.0"
authors = ["Michiel De Muynck <michieldemuynck@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", optional = false, features = ["derive"] }
serde_json = "1.0"
bincode = "1.1.4"
