[package]
name = "packed_tree"
version = "0.1.0"
authors = ["Michiel De Muynck <michieldemuynck@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
derive_destructure = { version = "1.0", path = "../derive_destructure" }

[dev-dependencies]
serde = { version = "1.0", optional = false, features = ["derive"] }
serde_json = "1.0"
bincode = "1.1.4"
criterion = "0.2"
rand = "0.7"
rand_xorshift = "0.2"
indextree = "3.2"
failure = "0.1.5"
id_tree = "1.5.0"
ego-tree = "0.6.0"
vec-tree = "0.1.2"
twox-hash = "1.4.1"
bumpalo = "2.5.0"

[[bench]]
name = "bench"
harness = false
